# 2p-preprocess

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.html  environment.yml  genindex.html  index.html  installation.html  objects.inv  pipeline.html  preprocess_2p.py  py-modindex.html  pyproject.toml  register_zstack.sh  register_zstack_by_name.sh  run_suite2p.sh  run_suite2p_batch.sh  run_suite2p_gpu.sh  run_suite2p_gpu_noneuropil.sh  run_suite2p_hmem.sh  search.html  searchindex.js  setup.py  setup.sh  usage.html
.github/workflows/: docs.yml
_sources/: changelog.md.txt  index.md.txt  installation.md.txt  usage.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/twop_preprocess/: index.rst.txt
_sources/autoapi/twop_preprocess/calcium/: index.rst.txt
_sources/autoapi/twop_preprocess/calcium/calcium/: index.rst.txt
_sources/autoapi/twop_preprocess/calcium/calcium_s2p/: index.rst.txt
_sources/autoapi/twop_preprocess/calcium/calcium_utils/: index.rst.txt
_sources/autoapi/twop_preprocess/calcium/metrics/: index.rst.txt
_sources/autoapi/twop_preprocess/calcium/processing_steps/: index.rst.txt
_sources/autoapi/twop_preprocess/calcium/reextraction/: index.rst.txt
_sources/autoapi/twop_preprocess/cli/: index.rst.txt
_sources/autoapi/twop_preprocess/neuropil/: index.rst.txt
_sources/autoapi/twop_preprocess/neuropil/ast_model/: index.rst.txt
_sources/autoapi/twop_preprocess/neuropil/neuropil/: index.rst.txt
_sources/autoapi/twop_preprocess/pipeline_utils/: index.rst.txt
_sources/autoapi/twop_preprocess/plotting_utils/: index.rst.txt
_sources/autoapi/twop_preprocess/plotting_utils/s2p_movie_utils/: index.rst.txt
_sources/autoapi/twop_preprocess/plotting_utils/s2p_plotting_utils/: index.rst.txt
_sources/autoapi/twop_preprocess/plotting_utils/sanity_check_utils/: index.rst.txt
_sources/autoapi/twop_preprocess/utils/: index.rst.txt
_sources/autoapi/twop_preprocess/zstack/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/twop_preprocess/: index.html
autoapi/twop_preprocess/calcium/: index.html
autoapi/twop_preprocess/calcium/calcium/: index.html
autoapi/twop_preprocess/calcium/calcium_s2p/: index.html
autoapi/twop_preprocess/calcium/calcium_utils/: index.html
autoapi/twop_preprocess/calcium/metrics/: index.html
autoapi/twop_preprocess/calcium/processing_steps/: index.html
autoapi/twop_preprocess/calcium/reextraction/: index.html
autoapi/twop_preprocess/cli/: index.html
autoapi/twop_preprocess/neuropil/: index.html
autoapi/twop_preprocess/neuropil/ast_model/: index.html
autoapi/twop_preprocess/neuropil/neuropil/: index.html
autoapi/twop_preprocess/pipeline_utils/: index.html
autoapi/twop_preprocess/plotting_utils/: index.html
autoapi/twop_preprocess/plotting_utils/s2p_movie_utils/: index.html
autoapi/twop_preprocess/plotting_utils/s2p_plotting_utils/: index.html
autoapi/twop_preprocess/plotting_utils/sanity_check_utils/: index.html
autoapi/twop_preprocess/utils/: index.html
autoapi/twop_preprocess/zstack/: index.html
docs/: changelog.md  conf.py  pipeline.md  usage.md
docs/_static/: custom.css
preprocess_2p/: preprocess_2p.py
src/: correct_neuropil.m  neuropil.py
src/neuropil/: __init__.py  ast_model.py  neuropil.py
src/plotting_utils/: __init__.py  s2p_movie_utils.py  s2p_plotting_utils.py
src/preprocess2p/: __init__.py  preprocess2p.py
src/utils/: extractdff_gmm.m  make_footprint.m  parse_ops.m
tests/calcium/: test_calcium_utils.py
twop_preprocess/: __init__.py  calcium.py  cli.py  default_ops.yml  pipeline_utils.py  utils.py  zstack.py
twop_preprocess/calcium/: __init__.py  calcium.py  calcium_pipeline.py  calcium_processing.py  calcium_s2p.py  calcium_utils.py  metrics.py  postprocessing.py  processing_steps.py  reextraction.py  suite2p_interaction.py
twop_preprocess/neuropil/: __init__.py  ast_model.py  neuropil.py
twop_preprocess/pipelines/: pipeline_utils.py  preprocess_all_sessions.py
twop_preprocess/plotting_utils/: s2p_movie_utils.py  s2p_plotting_utils.py  sanity_check_utils.py
