[project]
name = "2p-preprocess"
authors = [{name = "znamenskiy lab", email= "petr.znamenskiy@crick.ac.uk"}]
description = "preprocessing of two-photon data"
readme = "readme.md"
requires-python = ">=3.9"  # if using with suite2p, need <3.10
dynamic = ["version"]
dependencies = [
        "flexiznam @ git+ssh://git@github.com/znamlab/flexiznam.git",
        "znamutils @ git+ssh://git@github.com/znamlab/znamutils.git",
        "matplotlib",
        "jupyter",
        "more_itertools",
        "scikit-image",
        "tqdm",
        "click",
        "numpy",
        "scikit-learn",
        "numba",
        "cellpose",
        "tifffile",
        "jax",
        "optax",
        "sbxreader>=0.2.3",
]
license = {text = "mit"}

[project.scripts]
2p = "twop_preprocess.cli:cli"

[project.urls]
"homepage" = "https://github.com/znamlab/twop_preprocess"
"bug tracker" = "https://github.com/znamlab/twop_preprocess/issues"
"source code" = "https://github.com/znamlab/twop_preprocess"
"user support" = "https://github.com/znamlab/twop_preprocess/issues"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "tox",
  "black",
  "mypy",
  "pre-commit",
  "ruff",
  "setuptools_scm",
]
suite2p = [
          "suite2p <= 0.14",]
docs = [
  "sphinx>=7",
  "furo",
  "myst-parser",
  "sphinx-autoapi",
  "sphinx-copybutton",
  "setuptools_scm",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["twop_preprocess*"]
exclude = ["tests", "docs*"]


[tool.pytest.ini_options]
addopts = "--cov=twop_preprocess"

[tool.black]
target-version = ['py39']
skip-string-normalization = false
line-length = 88

[tool.setuptools_scm]
version_file = "twop_preprocess/_version.py"

[tool.check-manifest]
ignore = [
  ".yaml",
  "tox.ini",
  "tests/",
  "tests/test_unit/",
  "tests/test_integration/",
  "docs/",
  "docs/source/",
]


[tool.ruff]
line-length = 88
exclude = ["__init__.py","build",".eggs"]
lint.select = [
  "e",   # pycodestyle errors
  "f",   # pyflakes
  "i",   # isort
  # you can see what all the rules do here: https://docs.astral.sh/ruff/rules/
  # some additional ruff rules that might be useful (uncomment to enable)
  #"up",  # pyupgrade
  #"b",   # flake8 bugbear
  #"sim", # flake8 simplify
  #"c90", # mccabe complexity
]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39}
isolated_build = true

[[tool.uv.index]]
name = "jax-index"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
format = "flat"

[gh-actions]
python =
    3.9: py39

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=twop_preprocess --cov-report=xml
"""

[tool.uv.sources]
suite2p = { git = "ssh://git@github.com/znamlab/suite2p.git" }
